--- a/Jama/src/main/webapp/home.xhtml
+++ b/Jama/src/main/webapp/home.xhtml
@@ -10,7 +10,7 @@
 <h:body>
 	<h:form>
 		<h:outputText value="Cosa vuoi fare oggi?" styleClass="text" />
-		<h:commandButton value="Crea Convenzione" action="#{agreementManager.createAgreement()}" styleClass="buttons" />
+		<h:commandButton value="Crea Convenzione" action="#{contractManager.createAgreement()}" styleClass="buttons" />
 		<h:button value="Lista convenzioni" outcome="agreementList" styleClass="buttons" />
 		<h:button value="Scadenzario" outcome="agreementSchedule" styleClass="buttons" />
 	</h:form>
