--- a/Jama/src/main/webapp/agreementView.xhtml
+++ b/Jama/src/main/webapp/agreementView.xhtml
@@ -17,7 +17,7 @@
 		<h:form id="agreementWiz">
 
 			<input type="hidden" name="cid"
-				value='#{agreementManager.conversation.id}' />
+				value='#{contractManager.conversation.id}' />
 
 			<p:tabView activeIndex="#{agreementEditPB.currentTabIndex}">
 
@@ -53,7 +53,7 @@
 
 			<p:commandButton value="back" action="#{agreementEditPB.cancel()}"
 				ajax="false" />
-			<p:commandButton action="#{agreementManager.editAgreement()}" value="toEditMode" 
+			<p:commandButton action="#{contractManager.editAgreement()}" value="toEditMode" 
 			ajax="false"></p:commandButton>
 
 
