--- a/Jama/src/main/webapp/resources/sections/agreementRecap.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementRecap.xhtml
@@ -40,7 +40,7 @@
 					<h:outputText value="#{msgs.totalAgreementAmount}" />
 				</p:column>
 				<p:column>
-					<h:outputText value="#{agreementRecapPB.agr.wholeAmount}">
+					<h:outputText value="#{agreementRecapPB.contract.wholeAmount}">
 						<f:attribute name="plain" value="false" />
 					</h:outputText>
 				</p:column>
