--- a/Jama/src/main/webapp/agreementWiz.xhtml
+++ b/Jama/src/main/webapp/agreementWiz.xhtml
@@ -15,7 +15,7 @@
 	<h:form id="agreementWiz">
 
 
-		<input type="hidden" name="cid" value='#{agreementManager.conversation.id}' />
+		<input type="hidden" name="cid" value='#{contractManager.conversation.id}' />
 
 		<p:wizard step="#{agreementWizardPB.currentTabId}" flowListener="#{agreementWizardPB.handleFlow}">
 
