--- a/Jama/src/main/webapp/agreementEdit.xhtml
+++ b/Jama/src/main/webapp/agreementEdit.xhtml
@@ -15,7 +15,7 @@
 	<h:form id="agreementEdit">
 
 		<input type="hidden" name="cid"
-			value='#{agreementManager.conversation.id}' />
+			value='#{contractManager.conversation.id}' />
 
 		<p:tabView dynamic="true"
 			activeIndex="#{agreementEditPB.currentTabIndex}">
