--- a/Jama/src/main/webapp/installmentEdit.xhtml
+++ b/Jama/src/main/webapp/installmentEdit.xhtml
@@ -16,7 +16,7 @@
 	<h:form id="installmentEdit">
 
 		<input type="hidden" name="cid"
-			value='#{agreementManager.conversation.id}' />
+			value='#{contractManager.conversation.id}' />
 
 		<p:tabView>
 
