--- a/Jama/src/main/webapp/installmentWiz.xhtml
+++ b/Jama/src/main/webapp/installmentWiz.xhtml
@@ -12,7 +12,7 @@
 	<h:panelGrid width="100%" columns="2" columnClasses="col1">
 		<h:form id="installmentWiz">
 
-			<input type="hidden" name="cid" value='#{agreementManager.conversation.id}' />
+			<input type="hidden" name="cid" value='#{contractManager.conversation.id}' />
 
 			<p:wizard>
 
