--- a/Jama/src/main/webapp/installmentView.xhtml
+++ b/Jama/src/main/webapp/installmentView.xhtml
@@ -18,7 +18,7 @@
 	<h:form id="installmentView">
 
 		<input type="hidden" name="cid"
-			value='#{agreementManager.conversation.id}' />
+			value='#{contractManager.conversation.id}' />
 
 		<p:tabView>
 
