--- a/Jama/src/main/webapp/agreementEdit.xhtml
+++ b/Jama/src/main/webapp/agreementEdit.xhtml
@@ -46,8 +46,11 @@
 
 			</p:tab>
 
-			<ui:include src="/resources/sections/agreementWizAttachments.xhtml" />
-
+			<p:tab id="tabAttachs" title="#{msgs.attachments_Tab}">
+			<sections:agreementWizAttachments
+					editingDisable="false">
+				</sections:agreementWizAttachments>
+			</p:tab>
 
 		</p:tabView>
 
