--- a/Jama/src/main/webapp/agreementWiz.xhtml
+++ b/Jama/src/main/webapp/agreementWiz.xhtml
@@ -36,7 +36,11 @@
 
 			</p:tab>
 
-			<ui:include src="/resources/sections/agreementWizAttachments.xhtml" />
+					<p:tab id="tabAttachs" title="#{msgs.attachments_Tab}">
+			<sections:agreementWizAttachments
+					editingDisable="false">
+				</sections:agreementWizAttachments>
+			</p:tab>
 
 			<ui:include src="/resources/sections/agreementWizLastStep.xhtml" />
 
