--- a/Jama/src/main/webapp/agreementList.xhtml
+++ b/Jama/src/main/webapp/agreementList.xhtml
@@ -2,6 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui">
 
+<f:metadata>
+	<f:viewParam name="fchiefid" value="#{agreementListPCB.lazyModel.filterChiefId}" />
+	<f:viewParam name="fcompid" value="#{agreementListPCB.lazyModel.filterCompanyId}" />
+	<f:viewParam name="fmindate" value="#{agreementListPCB.lazyModel.filterMinDate}" />
+	<f:viewParam name="fmaxdate" value="#{agreementListPCB.lazyModel.filterMaxDate}" />
+	<f:viewParam name="sortorder" value="#{agreementListPCB.lazyModel.sortOrder}" />
+</f:metadata>
+
 <h:head>
 	<h:outputStylesheet name="home.css" library="css" />
 	<h:outputStylesheet name="table.css" library="css" />
